# loomis

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LOOMIS.md  README.md
bins/loomis/: Cargo.toml
bins/loomis/prompts/: init.md  plan_mode.md  system.md
bins/loomis/src/: app.rs  compact.rs  lib.rs  main.rs
bins/loomis/src/hooks/: cli_logger.rs  mod.rs  observability_hook.rs  persistence_hook.rs  plan_mode_hook.rs  sandbox_hook.rs  shell_approval.rs  system_prompt_hook.rs  todo_hook.rs  ui_stream.rs
bins/loomis/src/sandbox/: audit_logger.rs  env_sanitizer.rs  mod.rs  resource_tracker.rs  shell_filter.rs
bins/loomis/src/tools/: calculator.rs  echo.rs  edit.rs  enter_plan_mode.rs  exit_plan_mode.rs  glob.rs  ls.rs  mod.rs  read.rs  skill_tool.rs  todo.rs  tool_edit.rs  tool_glob.rs  tool_grep.rs  tool_ls.rs  tool_read.rs  tool_shell.rs  tool_write.rs  write.rs
bins/loomis/src/tui/: app.rs  debug.rs  event.rs  input.rs  markdown.rs  messages.rs  mod.rs  shell_exec.rs  ui.rs
docs/: Server Send Event Example.txt  architecture.md  beginner-developer-guide.md  developer-guide.md  request_example.json  response_example.json  sandbox-architecture.md  senior-developer-guide.md  stream_response_example.json  现代大模型结构.md
libs/deepseek/: Cargo.toml
libs/deepseek/src/: client.rs  error.rs  lib.rs  request.rs  response.rs  stream.rs
libs/engine/: Cargo.toml
libs/engine/src/: agent.rs  builder.rs  context.rs  hooks.rs  lib.rs
libs/hooks/: Cargo.toml
libs/hooks/src/: compact.rs  lib.rs
libs/memory/: Cargo.toml
libs/memory/src/: lib.rs  memory.rs  persistence.rs
libs/observability/: Cargo.toml
libs/observability/src/: event.rs  lib.rs  store.rs
libs/provider/: Cargo.toml
libs/provider/src/: client.rs  error.rs  lib.rs  message.rs  request.rs  response.rs  stream.rs  tool_def.rs
libs/subagent/src/: filter.rs  lib.rs  tool.rs
libs/tools/: Cargo.toml
libs/tools-macros/: Cargo.toml
libs/tools-macros/src/: lib.rs
libs/tools/src/: error.rs  fs.rs  lib.rs  registry.rs  schema.rs  tool.rs
libs/tools/src/sandbox/: config.rs  mod.rs
src/: lib.rs  main.rs
src/client/: client.rs  error.rs  llm_client.rs  mod.rs  request.rs  response.rs  stream.rs
src/core/: agent.rs  llm_client.rs  mod.rs
src/core/client/: client.rs  request.rs  response.rs
src/memory/: mod.rs
src/tools/: calculator.rs  echo.rs  error.rs  fs.rs  mod.rs  registry.rs  schema.rs  tool.rs  tool_edit.rs  tool_glob.rs  tool_grep.rs  tool_ls.rs  tool_read.rs  tool_shell.rs  tool_write.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
