[package]
name = "agent_oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
futures-util = "0.3.32"
