[workspace]
members = ["libs/*", "bins/*"]
resolver = "2"

[workspace.package]
name = "agent_oxide"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
futures-core = "0.3"
futures-executor = "0.3"
futures-util = "0.3.32"
regex = "1"
schemars = { version = "1", features = ["derive"] }
glob = "0.3"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
pulldown-cmark = "0.12"
tempfile = "3"
toml = "0.8"
tracing = "0.1"
